--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@
   --gray: var(--gray-400);
   --black: #000000;
   --primary: #FF04B4;
-  --primary-dark: #1D1B28;
+  --primary-dark: #195477;
   --contrast: #0062F9;
   --danger: #EF4444;
   --red: #F87171;
