--- a/views/component/header.ejs
+++ b/views/component/header.ejs
@@ -1,4 +1,48 @@
-<header>
+<header><div id="Top_bar" class="">
+
+	<div class="container">
+		<div class="column one">
+
+			<div class="top_bar_left clearfix" style="width: 1050.55px;">
+
+				<div class="logo text-logo"><a id="logo" href="https://punks.baby" title="PunkBabies" data-height="60" data-padding="15">PunkBabies</a></div>
+				<div class="menu_wrapper">
+					<nav id="menu"><ul id="menu-main-menu" class="menu menu-main"><li id="menu-item-51" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item"><a href="#Header_wrapper" data-hash="#Header_wrapper"><span>Home</span></a></li>
+<li id="menu-item-52" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#download" data-hash="#download"><span>About</span></a></li>
+<li id="menu-item-53" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#screens" data-hash="#screens"><span>Screens</span></a></li>
+<li id="menu-item-54" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#about" data-hash="#about"><span>About</span></a></li>
+<li id="menu-item-71" class="menu-item menu-item-type-custom menu-item-object-custom last"><a href="#credits" data-hash="#credits"><span>Credits</span></a></li>
+<li id="menu-item-72" class="menu-item menu-item-type-custom menu-item-object-custom last"><a target="_blank" href="http://themeforest.net/item/betheme-responsive-multipurpose-wordpress-theme/7758048?ref=muffingroup"><span>Buy now</span></a></li>
+</ul></nav><a class="responsive-menu-toggle " href="#" aria-label="Mobile menu"><i class="icon-menu-fine" aria-hidden="true"></i></a>				</div>
+
+				<div class="secondary_menu_wrapper">
+									</div>
+
+				<div class="banner_wrapper">
+									</div>
+
+			</div>
+
+			
+			<div class="search_wrapper">
+				
+<form method="get" id="searchform" action="https://punks.baby/">
+
+	
+  <svg class="icon_search" width="26" viewBox="0 0 26 26"><defs><style>.path{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:1.5px;}</style></defs><circle class="path" cx="11.35" cy="11.35" r="6"></circle><line class="path" x1="15.59" y1="15.59" x2="20.65" y2="20.65"></line></svg>
+  <span class="mfn-close-icon icon_close"><span class="icon">✕</span></span>
+
+	<input type="text" class="field" name="s" autocomplete="off" placeholder="Enter your search">
+	<input type="submit" class="display-none" value="">
+
+</form>
+			</div>
+
+		</div>
+	</div>
+</div>
+</header>
+//<header>
   <div>
     <h3 class="float-md-start mb-2 text-center">
       <a class="brand upper" href="/">
