--- a/views/component/header.ejs
+++ b/views/component/header.ejs
@@ -42,7 +42,7 @@
 	</div>
 </div>
 </header>
-//<header>
+<!---<header>
   <div>
     <h3 class="float-md-start mb-2 text-center">
       <a class="brand upper" href="/">
@@ -58,4 +58,4 @@
       <% } %>
     </nav>
   </div>
-</header>
+</header>-->
