--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -47,7 +47,12 @@
                 </a>
                 <% } %>
                 <% if (!_.isEmpty(punk.external_url)) { %>
-                <a class="view-on-link" href="<%= punk.external_url %>" target="_blank">
+                <a class="view-on-link" href="/<%= item_path_name %>/<%= similarUrl %>">
+                      <div class="view-on-block text-center">
+                        Similar
+                      </div>
+                    </a>
+                <a class="view-on-link" style="display:none" href="<%= punk.external_url %>" target="_blank">
                   <div class="view-on-block text-center">
                     <img class="view-on-icon" src="/images/profile@32w.png">
                     View on Official Site
@@ -64,7 +69,7 @@
                   similarUrl = similarUrl+'?trait_normalization=1';
                 }
                 %>
-                <div class="row">
+                <div class="row" style="display:none">
                   <div class="col-6" style="padding-right: 5px;">
                     <a class="view-on-link" href="/<%= item_path_name %>/<%= jsonUrl %>" target="_blank">
                       <div class="view-on-block text-center">
