--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -45,12 +45,11 @@
                 </a>
                 <% } %>
                 <% if (!_.isEmpty(punk.external_url)) { %>
-                <a class="view-on-link" href="<%= punk.external_url %>" target="_blank">
-                  <div class="view-on-block text-center">
-                    <img class="view-on-icon" src="/images/profile@32w.png">
-                    View on Official Site
-                  </div>
-                </a>
+                  <a class="view-on-link" href="/<%= item_path_name %>/<%= similarUrl %>">
+                      <div class="view-on-block text-center">
+                        Similar
+                      </div>
+                    </a>
                 <% } %>
                 <%
                 let jsonUrl = punk.id+'/json';
@@ -63,7 +62,7 @@
                 }
                 %>
                 <div class="row">
-                  <div class="col-6" style="padding-right: 5px;">
+                  <div class="col-6" style="padding-right: 5px; display:none">
                     <a class="view-on-link" href="/<%= item_path_name %>/<%= jsonUrl %>" target="_blank">
                       <div class="view-on-block text-center">
                         JSON
