--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -33,7 +33,7 @@
                 </div>
               </div>
               <div class="mt-3 mb-3">
-                <div class="punk-description dont-break-out">
+                <div class="punk-description text-center mt-4 dont-break-out">
                   <%- md.render(punk.description) %>
                 </div>
                 <% if (!_.isEmpty(collection_contract_address)) { %>
