--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,20 +30,24 @@
           <footer>
             <button type="submit">Search</button>
           </footer>
+          <div class="row">
+          <div class="col-md-4">
           <a class="trait-fileter-btn btn btn-primary" data-bs-toggle="offcanvas" href="#traitFilterOffcanvas" role="button" aria-controls="offcanvasExample">
             Trait Filter (<span id="trait-fileter-selected-num"><%= selectedTraits.length %></span>)
           </a>
-          <div>
+          </div>
+          <div class="col-md-4">
             <select id="sorting-select" class="form-select" name="order_by">
               <option value="rarity" <% if (orderBy=='rarity') { %> selected <% } %>>Sort By Rarity</option>
               <option value="id" <% if (orderBy=='id') { %> selected <% } %>>Sort By ID</option>
             </select>
           </div>
-          <div>
+          <div class="col-md-4">
             <div class="form-check form-switch" style="width: 12rem; margin-left: auto; margin-right: auto; font-size: 1rem; line-height: 30px; margin-top: 15px;">
               <input style="height: 25px; width: 40px;" class="form-check-input" type="checkbox" id="traitNormalization" <% if (useTraitNormalization == '1') { %> checked <% } %> >
               <label class="form-check-label" for="traitNormalization">Trait Normalization</label>
             </div>
+          </div>
           </div>
         </form>
         <div class="trait-fileter-offcanvas offcanvas offcanvas-start" tabindex="-1" id="traitFilterOffcanvas" aria-labelledby="traitFilterOffcanvasLabel">
