--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -70,7 +70,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="col-6" style="padding-left: 5px;">
+                  <div class="col-6" style="padding-left: 5px; display:none">
                     <a class="view-on-link" href="/<%= item_path_name %>/<%= similarUrl %>">
                       <div class="view-on-block text-center">
                         Similar
