--- a/views/component/header.ejs
+++ b/views/component/header.ejs
@@ -1,4 +1,4 @@
-<header><div id="Top_bar" class="">
+<!--<header><div id="Top_bar" class="">
 
 	<div class="container">
 		<div class="column one">
@@ -25,7 +25,7 @@
 	</div>
 </div>
 </header>
-<!---<header>
+--><header>
   <div>
     <h3 class="float-md-start mb-2 text-center">
       <a class="brand upper" href="/">
@@ -34,6 +34,7 @@
       </a>   
     </h3>
     <nav class="nav nav-masthead justify-content-center float-md-end">
+    <a class="nav-link" href="https://punks.baby">Home</a>
       <a class="nav-link <% if (activeTab == 'rarity') { %> active <% } %>" aria-current="page" href="/">Rarity</a>
       <a class="nav-link <% if (activeTab == 'matrix') { %> active <% } %>" href="/matrix">Matrix</a>
       <% if (use_wallet) { %>
@@ -41,4 +42,4 @@
       <% } %>
     </nav>
   </div>
-</header>-->
+</header>
