--- a/views/matrix.ejs
+++ b/views/matrix.ejs
@@ -60,7 +60,7 @@
         </h2>
         <% } %>
         <hr class="mt-5 mb-5">
-        <h1 class="heading upper text-center">Trait Count Matrix</h1>
+        <!--<h1 class="heading upper text-center">Trait Count Matrix</h1>
         <div class="d-flex flex-wrap justify-content-center">
             <% if (!_.isEmpty(allTraitCounts)) { %>
                 <% allTraitCounts.forEach(function(traitCount) { %>
@@ -74,7 +74,7 @@
                 There's no result
             </h2>
             <% } %>
-        </div>
+        </div>-->
       </main>
       <%- include('./component/footer'); -%>
     </div>
