--- a/views/matrix.ejs
+++ b/views/matrix.ejs
@@ -37,7 +37,7 @@
                 <h3><%= allTrait.trait_type %></h3>
                 <div class="d-flex flex-wrap justify-content-center">
                   <div class="tile">
-                    <h4><%= allTrait.trait_type %></h4>
+                    <!--<h4><%= allTrait.trait_type %></h4>-->
                     <h5 class="mt-3 mb-3"><%= allTrait.trait_detail_type %></h5>
                     <p><%= ((allTrait.punk_count/totalPunkCount)*100).toFixed(2) %>% have this trait</p>
                   </div>
@@ -46,7 +46,7 @@
               } else {
               %>
                 <div class="tile">
-                  <h4><%= allTrait.trait_type %></h4>
+                  <!--<h4><%= allTrait.trait_type %></h4>-->
                   <h5 class="mt-3 mb-3"><%= allTrait.trait_detail_type %></h5>
                   <p><%= ((allTrait.punk_count/totalPunkCount)*100).toFixed(2) %>% have this trait</p>
                 </div>
