--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -96,10 +96,19 @@ body {
  overflow: auto !important;
 }
 
+.px-3 h3:nth-of-type(8) {
+  display: none;
+}
 .px-3.d-flex:nth-of-type(8) {
   display: none;
 }
+.px-3 h3:nth-of-type(11) {
+  display: none;
+}
 .px-3.d-flex:nth-of-type(11) {
+  display: none;
+}
+.px-3 h3:nth-of-type(12) {
   display: none;
 }
 .px-3.d-flex:nth-of-type(12) {
