--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,7 +99,7 @@ body {
 .px-3 h3:nth-of-type(8) {
   display: none;
 }
-.px-3 div:nth-of-type(8) {
+.px-3:nth-child(20) {
   display: none;
 }
 .px-3 h3:nth-of-type(11) {
