--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,19 +99,19 @@ body {
 .px-3 h3:nth-of-type(8) {
   display: none;
 }
-.px-3:nth-child(20) {
+.px-3:nth-child(8 of .picture) {
   display: none;
 }
 .px-3 h3:nth-of-type(11) {
   display: none;
 }
-.px-3:nth-child(26) {
+.px-3:nth-child(11 of .picture) {
   display: none;
 }
 .px-3 h3:nth-of-type(12) {
   display: none;
 }
-.px-3:nth-child(28) {
+.px-3:nth-child(12 of .picture) {
   display: none;
 }
 
