--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,7 @@
   --size-8: 8rem;
   --size-9: 12rem;
   --content-width: 60rem;
-  --font-family-title: 'Space Mono',monospace,-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
+  --font-family-title: "Press Start 2P", Helvetica, Arial, sans-serif;
   --font-family-body: Montserrat,-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
   --font-size-xs: .409rem;
   --font-size-sm: .6875rem;
