--- a/views/component/meta.ejs
+++ b/views/component/meta.ejs
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@1,700&amp;display=swap" rel="stylesheet" media="all" onload="this.media='all'">
+<link rel='stylesheet' id='mfn-fonts-css'  href='https://fonts.googleapis.com/css?family=Roboto%3A1%2C300%2C400%2C400italic%2C500%2C700%2C700italic%2C900%7CPress+Start+2P%3A1%2C300%2C400%2C400italic%2C500%2C700%2C700italic%2C900&#038;display=swap&#038;ver=5.8.1' type='text/css' media='all' />
 
 <!-- Bootstrap core CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
