--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,7 +121,7 @@ body {
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
-  font-weight: 700;
+  font-weight: 500;
   color: rgba(255, 255, 255, .5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
@@ -168,7 +168,7 @@ body {
 
 .nav-link {
   font-family: var(--font-family-title);
-  font-style: italic;
+ /* font-style: italic;*/
 }
 
 .upper {
