--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,9 @@
     <div class="container d-flex w-100 p-3 mx-auto flex-column" style="min-height: 100%; max-width: 72em;">
       <%- include('./component/header'); -%>
       <main class="px-3" style="min-height: 100%;">
-        <h1 class="superbig upper text-center"><%= collection_name %></h1>
+      <h1 class="superbig upper text-center"><img src="//punks.baby/wp-content/uploads/2021/10/PunkBabies_Logo-768x288.png" alt="PunkBabies" class="tp-rs-img rs-lazyload" width="768" height="288" data-lazyload="//punks.baby/wp-content/uploads/2021/10/PunkBabies_Logo-768x288.png" data-no-retina="" data-reference="//punks.baby/wp-content/uploads/2021/10/PunkBabies_Logo-768x288.png" data-src-rs-ref="//punks.baby/wp-content/uploads/2021/10/PunkBabies_Logo-768x288.png" style="width: 100%; position: relative; height: 100%;">
+       </h1>
+       <!--<h1 class="superbig upper text-center"><%= collection_name %></h1>-->
         <form class="search text-center">
           <fieldset>
             <input class="search-text-input" type="text" name="search" placeholder="Search by ID..." value="<%= search %>">
