--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,19 +99,19 @@ body {
 .px-3 h3:nth-of-type(8) {
   display: none;
 }
-.px-3:nth-child(19) {
+.flex-wrap:nth-of-type(8) {
   display: none !important;
 }
 .px-3 h3:nth-of-type(11) {
   display: none;
 }
-.px-3:nth-child(25) {
+.flex-wrap:nth-of-type(11) {
   display: none !important;
 }
 .px-3 h3:nth-of-type(12) {
   display: none;
 }
-.px-3:nth-child(27) {
+.flex-wrap:nth-of-type(12) {
   display: none !important;
 }
 
