--- a/views/wallet.ejs
+++ b/views/wallet.ejs
@@ -21,6 +21,7 @@
        </h1>
         <!--<h1 class="superbig upper text-center"><%= collection_name %></h1>-->
         <h3 class="text-center mb-3">Check Rarity In Your Wallet</h3>
+        <p>Currently only shows up to 50 items.</p>
         <form class="search text-center">
           <fieldset>
             <input class="search-text-input" type="text" name="search" placeholder="Enter your wallet address..." value="<%= search %>">
