--- a/views/similar_punks.ejs
+++ b/views/similar_punks.ejs
@@ -28,7 +28,7 @@
             </div>
             <div class="col-md-6">
             <div class="d-flex justify-content-center">
-              <div class="col-lg-3 col-md-4 col-sm-6 col-6" style="padding-left: 30px; padding-right: 30px;">
+              <div style="padding-left: 30px; padding-right: 30px;">
                 <%- include('./component/punk', {punk: punk}); -%>
               </div>
             </div>
