--- a/views/component/header.ejs
+++ b/views/component/header.ejs
@@ -1,31 +1,4 @@
-<!--<header><div id="Top_bar" class="">
-
-	<div class="container">
-		<div class="column one">
-
-			<div class="top_bar_left clearfix" style="width: 1050.55px;">
-
-				<div class="logo text-logo"><a id="logo" href="https://punks.baby" title="PunkBabies" data-height="60" data-padding="15">PunkBabies</a></div>
-				<div class="menu_wrapper">
-					<nav id="menu"><ul id="menu-main-menu" class="menu menu-main"><li id="menu-item-51" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item"><a href="#Header_wrapper" data-hash="#Header_wrapper"><span>Home</span></a></li>
-<li id="menu-item-52" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#download" data-hash="#download"><span>About</span></a></li>
-<li id="menu-item-53" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#screens" data-hash="#screens"><span>Screens</span></a></li>
-<li id="menu-item-54" class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#about" data-hash="#about"><span>About</span></a></li>
-<li id="menu-item-71" class="menu-item menu-item-type-custom menu-item-object-custom last"><a href="#credits" data-hash="#credits"><span>Credits</span></a></li>
-<li id="menu-item-72" class="menu-item menu-item-type-custom menu-item-object-custom last"><a target="_blank" href="http://themeforest.net/item/betheme-responsive-multipurpose-wordpress-theme/7758048?ref=muffingroup"><span>Buy now</span></a></li>
-</ul></nav><a class="responsive-menu-toggle " href="#" aria-label="Mobile menu"><i class="icon-menu-fine" aria-hidden="true"></i></a>				</div>
-
-
-			</div>
-
-			
-		
-
-		</div>
-	</div>
-</div>
-</header>
---><header>
+<header>
   <div>
     <h3 class="float-md-start mb-2 text-center">
       <a class="brand upper" href="https://punks.baby">
