--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@
   --white: #FFFFFF;
   --gray: var(--gray-400);
   --black: #000000;
-  --primary: #FF04B4;
+  --primary: #f62681;
   --primary-dark: #10364c;
   --contrast: #0062F9;
   --danger: #EF4444;
