--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,15 +121,16 @@ body {
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
-  font-weight: 500;
-  color: rgba(255, 255, 255, .5);
+  font-weight: 400;
+  color: #fff;
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
+ /* border-bottom: .25rem solid transparent;*/
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+ border-bottom-color: rgba(255, 255, 255, .25);
+ color: var(--primary);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -137,7 +138,7 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
+  color: var(--primary);
   border-bottom-color: #fff;
 }
 
