--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,6 +119,10 @@ body {
  * Header
  */
 
+header {
+ padding: 15px 0px 0px 0px;
+}
+
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 400;
