--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -17,7 +17,7 @@
     <div class="container d-flex w-100 p-3 mx-auto flex-column" style="min-height: 100%; max-width: 72em;">
       <%- include('./component/header'); -%>
       <main class="px-3" style="min-height: 100%;">
-      <p style="font-weight:bold !important; font-size:24px !important; text-align:right;"><a href="/">ⓧ</a></p>
+      <p style="font-weight:bold !important; font-size:24px !important; text-align:right; color: #fff !important; text-decoration: none !important;"><a href="/">ⓧ</a></p>
         <div style="max-width: 42rem; margin-top: 5rem; margin-left: auto; margin-right: auto;">
           <div class="row">
             <% if (!_.isEmpty(punk)) { %>
