--- a/views/component/footer.ejs
+++ b/views/component/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="text-white-50 text-center">
-<ul class="social"><li class="twitter"><a href="https://twitter.com/PunkBabies" title="Twitter"><i class="icon-twitter"></i></a></li><li class="custom"><a href="http://discord.gg/WkVuaewNJ8" title="Discord"><i class="fab fa-discord"></i></a></li></ul>
+  <p><a href="https://twitter.com/PunkBabies" class="text-white" title="Twitter">Twitter</a> | <a href="http://discord.gg/WkVuaewNJ8" class="text-white" title="Discord">Discord</a></p>
   <p>Made with ❤️ by <a href="https://twitter.com/fukuball" class="text-white" target="_blank">@fukuball</a></p>
   <p class="dont-break-out">Donate: 0x17cbD516166720b8c75fE75235Ed0218d9CFDFbe</p>
 </footer>
